reduce bottom margin on medical history cards
This is to match the prototype where things are more compact.

(Note: these card components still need updating to bring in the latest
styles from the design system)

--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_cancer_history_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_cancer_history_card.jinja
@@ -18,8 +18,9 @@
       nestedInfoCard({
         "card": {
           "heading": "Item " ~ presented_item.counter,
-          "headingLevel": 4
-        } if presented_item.counter else {},
+          "headingLevel": 4,
+          "classes": "nhsuk-u-margin-bottom-4"
+        } if presented_item.counter else {"classes": "nhsuk-u-margin-bottom-4"},
         "headingLevel": keyHeadingLevel,
         "rows": [
           {
