--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -4,6 +4,7 @@
 {% from "nhsuk/components/summary-list/macro.jinja" import summaryList %}
 {% from "components/participant-details/summary_list_rows.jinja" import last_mammogram_html %}
 {% from "mammograms/medical_information/medical_history/cards/breast_cancer_history_card.jinja" import breast_cancer_history_card %}
+{% from "mammograms/medical_information/medical_history/cards/mastectomy_or_lumpectomy_history_card.jinja" import mastectomy_or_lumpectomy_history_card %}
 {% from "mammograms/components/card_with_status.jinja" import card_with_status %}
 
 {% block step_content %}
@@ -81,15 +82,6 @@
   csrf_input=csrf_input,
   ) %}
 
-  {% set mastectomy_or_lumpectomy_history_html %}
-    {% for presented_item in presenter.mastectomy_or_lumpectomy_history %}
-      <a style="float: right" class="nhsuk-link nhsuk-link--no-visited-state" href="{{ presented_item.change_link.href}}">
-        {{ presented_item.change_link.text }}<span class="nhsuk-u-visually-hidden">{{ presented_item.change_link.visually_hidden_text }}</span>
-      </a><br>
-      {{ summaryList(presented_item.summary_list_params) }}
-    {% endfor %}
-  {% endset %}
-
   {% set implanted_medical_device_history_html %}
     {% for presented_item in presenter.implanted_medical_device_history %}
       <a style="float: right" class="nhsuk-link nhsuk-link--no-visited-state" href="{{ presented_item.change_link.href}}">
@@ -134,6 +126,8 @@
   {% endset %}
 
   {{ breast_cancer_history_card(presenter.breast_cancer_history) }}
+  {{ mastectomy_or_lumpectomy_history_card(presenter.mastectomy_or_lumpectomy_history) }}
+
 
   {{ summaryList({
     "rows": [
@@ -184,17 +178,6 @@
        },
        "value": {
          "html": benign_lump_history_html
-       },
-       "actions": {
-          "items": []
-       }
-     },
-     {
-       "key": {
-         "text": "Mastectomy or lumpectomy history"
-       },
-       "value": {
-         "html": mastectomy_or_lumpectomy_history_html
        },
        "actions": {
           "items": []
