--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_cancer_history_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_cancer_history_card.jinja
@@ -3,9 +3,10 @@
 
 {% macro breast_cancer_history_card(breast_cancer_history) %}
   {% if breast_cancer_history %}
-    <section>
+  <section>
     <h3 class="nhsuk-u-margin-bottom-2">Breast cancer</h3>
   {% endif %}
+
   {% for presented_item in breast_cancer_history %}
     {% set keyHeadingLevel = 5 if presented_item.counter else 4 %}
 
@@ -14,102 +15,103 @@
       {{ presented_item.change_link.text }}<span class="nhsuk-u-visually-hidden">{{ presented_item.change_link.visually_hidden_text }}</span>
     </a>
 
-    {{
-      nestedInfoCard({
-        "card": {
-          "heading": "Item " ~ presented_item.counter,
-          "headingLevel": 4,
-          "classes": "nhsuk-u-margin-bottom-4"
-        } if presented_item.counter else {"classes": "nhsuk-u-margin-bottom-4"},
-        "headingLevel": keyHeadingLevel,
-        "rows": [
-          {
-            "key": "Cancer location",
-            "value": {
-              "html": paragraph(presented_item.cancer_location)
-            }
-          },
-          {
-            "key": "Procedures",
-            "value": {
-              "rows": [
-                {
-                  "columns": [
-                    {
-                      "heading": "Right breast",
-                      "html": paragraph(presented_item.right_breast_procedure)
-                    },
-                    {
-                      "heading": "Left breast",
-                      "html": paragraph(presented_item.left_breast_procedure)
-                    },
-                  ]
-                }
-              ]
-            }
-          },
-          {
-            "key": "Other surgery",
-            "value": {
-              "rows": [
-                {
-                  "columns": [
-                    {
-                      "heading": "Right breast",
-                      "html": listWithDefault(presented_item.right_breast_other_surgery)
-                    },
-                    {
-                      "heading": "Left breast",
-                      "html": listWithDefault(presented_item.left_breast_other_surgery)
-                    },
-                  ]
-                }
-              ]
-            }
-          },
-          {
-            "key": "Treatment",
-            "value": {
-              "rows": [
-                {
-                  "columns": [
-                    {
-                      "heading": "Right breast",
-                      "html": listWithDefault(presented_item.right_breast_treatments)
-                    },
-                    {
-                      "heading": "Left breast",
-                      "html": listWithDefault(presented_item.left_breast_treatments)
-                    },
-                  ]
-                },
-                {
-                  "columns": [
-                    {
-                      "heading": "Systemic treatments",
-                      "html": listWithDefault(presented_item.systemic_treatments)
-                    }
-                  ]
-                }
-              ]
-            }
-          },
-          {
-            "key": "Treatment location",
-            "value": {
-              "html": itemWithDetails(presented_item.intervention_location)
-            }
-          },
-          {
-            "key": "Additional details",
-            "value": {
-              "html": paragraph(presented_item.additional_details)
-            }
-          } if presented_item.additional_details
-        ]
-      })
-    }}
+    {{ nestedInfoCard({
+      "card": {
+        "heading": "Item " ~ presented_item.counter,
+        "headingLevel": 4,
+        "classes": "nhsuk-u-margin-bottom-4"
+      } if presented_item.counter else {
+        "classes": "nhsuk-u-margin-bottom-4"
+      },
+      "headingLevel": keyHeadingLevel,
+      "rows": [
+        {
+          "key": "Cancer location",
+          "value": {
+            "html": paragraph(presented_item.cancer_location)
+          }
+        },
+        {
+          "key": "Procedures",
+          "value": {
+            "rows": [
+              {
+                "columns": [
+                  {
+                    "heading": "Right breast",
+                    "html": paragraph(presented_item.right_breast_procedure)
+                  },
+                  {
+                    "heading": "Left breast",
+                    "html": paragraph(presented_item.left_breast_procedure)
+                  },
+                ]
+              }
+            ]
+          }
+        },
+        {
+          "key": "Other surgery",
+          "value": {
+            "rows": [
+              {
+                "columns": [
+                  {
+                    "heading": "Right breast",
+                    "html": listWithDefault(presented_item.right_breast_other_surgery)
+                  },
+                  {
+                    "heading": "Left breast",
+                    "html": listWithDefault(presented_item.left_breast_other_surgery)
+                  },
+                ]
+              }
+            ]
+          }
+        },
+        {
+          "key": "Treatment",
+          "value": {
+            "rows": [
+              {
+                "columns": [
+                  {
+                    "heading": "Right breast",
+                    "html": listWithDefault(presented_item.right_breast_treatments)
+                  },
+                  {
+                    "heading": "Left breast",
+                    "html": listWithDefault(presented_item.left_breast_treatments)
+                  },
+                ]
+              },
+              {
+                "columns": [
+                  {
+                    "heading": "Systemic treatments",
+                    "html": listWithDefault(presented_item.systemic_treatments)
+                  }
+                ]
+              }
+            ]
+          }
+        },
+        {
+          "key": "Treatment location",
+          "value": {
+            "html": itemWithDetails(presented_item.intervention_location)
+          }
+        },
+        {
+          "key": "Additional details",
+          "value": {
+            "html": paragraph(presented_item.additional_details)
+          }
+        } if presented_item.additional_details
+      ]
+    }) }}
   {% endfor %}
+
   {% if breast_cancer_history %}
   </section>
   {% endif %}
