refactor: rename macros for consistency
Our conventions are not completely consistent, because snake case sneaks
in from the python side and camel case from the design system side,
but we can make sure that:

- all macros we define use snake case
- components imported from the design system will be the only use of snake case in Jinja templates
- everything in core/components has an app_ prefix to distinguish from
  the design system components.

There's a fuzzy line of what belongs in app/components but I've decided
not to move anything right now. Perhaps we can review this later.

--- a/manage_breast_screening/clinics/jinja2/clinics/index.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/index.jinja
@@ -1,7 +1,7 @@
 {% extends 'layout-app.jinja' %}
 
 {% from 'nhsuk/components/tag/macro.jinja' import tag %}
-{% from 'components/count/macro.jinja' import appCount %}
+{% from 'components/count/macro.jinja' import app_count %}
 {% from 'components/secondary-navigation/macro.jinja' import app_secondary_navigation %}
 
 {% block page_content %}
@@ -21,7 +21,7 @@
 ] %}
 {% set href %}/clinics/{{ item.id }}{% endset %}
 {% set ns.secondaryNavItems = ns.secondaryNavItems + [{
-  "text": (item.label + " " + appCount(presenter.counts_by_filter[item.id])) | safe,
+  "text": (item.label + " " + app_count(presenter.counts_by_filter[item.id])) | safe,
   "href": href | trim,
   "current": true if item.id == presenter.filter
 }] %}
