--- a/manage_breast_screening/core/jinja2/components/appointment-status/macro.jinja
+++ b/manage_breast_screening/core/jinja2/components/appointment-status/macro.jinja
@@ -1,3 +1,3 @@
-{% macro appointment_status(presented_appointment) %}
+{% macro app_appointment_status(presented_appointment) %}
   {%- include 'components/appointment-status/template.jinja' -%}
 {% endmacro %}
