--- a/manage_breast_screening/core/jinja2/components/check-in/macro.jinja
+++ b/manage_breast_screening/core/jinja2/components/check-in/macro.jinja
@@ -1,3 +1,3 @@
-{% macro check_in(presented_appointment, check_in_url, csrf_input) %}
+{% macro app_check_in(presented_appointment, check_in_url, csrf_input) %}
   {%- include 'components/check-in/template.jinja' -%}
 {% endmacro %}
