--- a/manage_breast_screening/core/jinja2/components/nested-info-card/macro.jinja
+++ b/manage_breast_screening/core/jinja2/components/nested-info-card/macro.jinja
@@ -1,3 +1,3 @@
-{% macro nestedInfoCard(params) %}
+{% macro app_nested_info_card(params) %}
   {%- include 'components/nested-info-card/template.jinja' -%}
 {% endmacro %}
