--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_cancer_history_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_cancer_history_card.jinja
@@ -1,5 +1,5 @@
-{% from "components/nested-info-card/macro.jinja" import nestedInfoCard %}
-{% from "mammograms/medical_information/medical_history/cards/macros.jinja" import listWithDefault, itemWithDetails, paragraph %}
+{% from "components/nested-info-card/macro.jinja" import app_nested_info_card %}
+{% from "mammograms/medical_information/medical_history/cards/macros.jinja" import list_with_default, item_with_details, paragraph %}
 
 {% macro breast_cancer_history_card(breast_cancer_history) %}
   {% if breast_cancer_history %}
@@ -15,7 +15,7 @@
       {{ presented_item.change_link.text }}<span class="nhsuk-u-visually-hidden">{{ presented_item.change_link.visually_hidden_text }}</span>
     </a>
 
-    {{ nestedInfoCard({
+    {{ app_nested_info_card({
       "card": {
         "heading": "Item " ~ presented_item.counter,
         "headingLevel": 4,
@@ -58,11 +58,11 @@
                 "columns": [
                   {
                     "heading": "Right breast",
-                    "html": listWithDefault(presented_item.right_breast_other_surgery)
+                    "html": list_with_default(presented_item.right_breast_other_surgery)
                   },
                   {
                     "heading": "Left breast",
-                    "html": listWithDefault(presented_item.left_breast_other_surgery)
+                    "html": list_with_default(presented_item.left_breast_other_surgery)
                   },
                 ]
               }
@@ -77,11 +77,11 @@
                 "columns": [
                   {
                     "heading": "Right breast",
-                    "html": listWithDefault(presented_item.right_breast_treatments)
+                    "html": list_with_default(presented_item.right_breast_treatments)
                   },
                   {
                     "heading": "Left breast",
-                    "html": listWithDefault(presented_item.left_breast_treatments)
+                    "html": list_with_default(presented_item.left_breast_treatments)
                   },
                 ]
               },
@@ -89,7 +89,7 @@
                 "columns": [
                   {
                     "heading": "Systemic treatments",
-                    "html": listWithDefault(presented_item.systemic_treatments)
+                    "html": list_with_default(presented_item.systemic_treatments)
                   }
                 ]
               }
@@ -99,7 +99,7 @@
         {
           "key": "Treatment location",
           "value": {
-            "html": itemWithDetails(presented_item.intervention_location)
+            "html": item_with_details(presented_item.intervention_location)
           }
         },
         {
