--- a/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_details.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_details.jinja
@@ -2,9 +2,9 @@
 {% from 'nhsuk/components/card/macro.jinja' import card %}
 {% from 'nhsuk/components/back-link/macro.jinja' import backLink %}
 {% from 'nhsuk/components/summary-list/macro.jinja' import summaryList %}
-{% from 'components/appointment-status/macro.jinja' import appointment_status %}
-{% from 'components/appointment-header/macro.jinja' import appointment_header %}
-{% from 'components/check-in/macro.jinja' import check_in %}
+{% from 'components/appointment-status/macro.jinja' import app_appointment_status %}
+{% from 'components/appointment-header/macro.jinja' import app_appointment_header %}
+{% from 'components/check-in/macro.jinja' import app_check_in %}
 {% from 'components/secondary-navigation/macro.jinja' import app_secondary_navigation %}
 {% from 'mammograms/special_appointments/special_appointment_banner.jinja' import special_appointment_banner %}
 {% from 'mammograms/appointment_notes/appointment_note_banner.jinja' import appointment_note_banner %}
@@ -29,9 +29,9 @@
     </h1>
 
     <div class="app-header__status-tag">
-      {{ appointment_status(presented_appointment) }}
+      {{ app_appointment_status(presented_appointment) }}
       <p class="nhsuk-u-margin-bottom-2">
-        {{ check_in(
+        {{ app_check_in(
           presented_appointment,
           check_in_url=url(
             'mammograms:check_in',
@@ -46,7 +46,7 @@
 
   </div>
 
-  {{ appointment_header(request.user, presented_appointment, csrf_input=csrf_input) }}
+  {{ app_appointment_header(request.user, presented_appointment, csrf_input=csrf_input) }}
 
   {{ special_appointment_banner(presented_appointment.special_appointment, show_change_link=presented_appointment.active) }}
 
