--- a/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_note.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_note.jinja
@@ -2,9 +2,9 @@
 {% from 'nhsuk/components/back-link/macro.jinja' import backLink %}
 {% from 'nhsuk/components/button/macro.jinja' import button %}
 {% from 'nhsuk/components/inset-text/macro.jinja' import insetText %}
-{% from 'components/appointment-status/macro.jinja' import appointment_status %}
-{% from 'components/appointment-header/macro.jinja' import appointment_header %}
-{% from 'components/check-in/macro.jinja' import check_in %}
+{% from 'components/appointment-status/macro.jinja' import app_appointment_status %}
+{% from 'components/appointment-header/macro.jinja' import app_appointment_header %}
+{% from 'components/check-in/macro.jinja' import app_check_in %}
 {% from 'components/secondary-navigation/macro.jinja' import app_secondary_navigation %}
 {% from 'mammograms/special_appointments/special_appointment_banner.jinja' import special_appointment_banner %}
 {% from 'django_form_helpers.jinja' import form_error_summary %}
@@ -31,9 +31,9 @@
       </h1>
 
       <div class="app-header__status-tag">
-        {{ appointment_status(presented_appointment) }}
+        {{ app_appointment_status(presented_appointment) }}
         <p class="nhsuk-u-margin-bottom-2">
-          {{ check_in(
+          {{ app_check_in(
             presented_appointment,
             check_in_url=url(
               'mammograms:check_in',
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    {{ appointment_header(request.user, presented_appointment, csrf_input=csrf_input) }}
+    {{ app_appointment_header(request.user, presented_appointment, csrf_input=csrf_input) }}
 
     {{ special_appointment_banner(presented_appointment.special_appointment, show_change_link=presented_appointment.active) }}
 
