fix: add diagnosis year to breast cancer history card

--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_cancer_history_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_cancer_history_card.jinja
@@ -32,6 +32,12 @@
           }
         },
         {
+          "key": "Diagnosis year",
+          "value": {
+            "html": paragraph(presented_item.diagnosis_year)
+          }
+        } if presented_item.diagnosis_year,
+        {
           "key": "Procedures",
           "value": {
             "rows": [
