--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -5,6 +5,7 @@
 {% from "components/participant-details/summary_list_rows.jinja" import last_mammogram_html %}
 {% from "mammograms/medical_information/medical_history/cards/breast_cancer_history_card.jinja" import breast_cancer_history_card %}
 {% from "mammograms/medical_information/medical_history/cards/mastectomy_or_lumpectomy_history_card.jinja" import mastectomy_or_lumpectomy_history_card %}
+{% from "mammograms/medical_information/medical_history/cards/benign_lump_history_card.jinja" import benign_lump_history_card %}
 {% from "mammograms/components/card_with_status.jinja" import card_with_status %}
 
 {% block step_content %}
@@ -118,16 +119,9 @@
     {% endfor %}
   {% endset %}
 
-  {% set benign_lump_history_html %}
-    {% for presented_item in presenter.benign_lump_history %}
-      {{ summaryList(presented_item.summary_list_params) }}
-      <p><a href="{{ presented_item.change_link.href }}" class="nhsuk-link nhsuk-link--no-visited-state">{{ presented_item.change_link.text }}</a></p>
-    {% endfor %}
-  {% endset %}
-
   {{ breast_cancer_history_card(presenter.breast_cancer_history) }}
   {{ mastectomy_or_lumpectomy_history_card(presenter.mastectomy_or_lumpectomy_history) }}
-
+  {{ benign_lump_history_card(presenter.benign_lump_history) }}
 
   {{ summaryList({
     "rows": [
@@ -167,17 +161,6 @@
        },
        "value": {
          "html": other_procedure_history_html
-       },
-       "actions": {
-          "items": []
-       }
-     },
-     {
-       "key": {
-         "text": "Benign lump history"
-       },
-       "value": {
-         "html": benign_lump_history_html
        },
        "actions": {
           "items": []
