--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -2,7 +2,7 @@
 {% from "nhsuk/components/button/macro.jinja" import button %}
 {% from "nhsuk/components/inset-text/macro.jinja" import insetText %}
 {% from "nhsuk/components/summary-list/macro.jinja" import summaryList %}
-{% from "components/participant-details/summary_list_rows.jinja" import last_mammogram_html %}
+{% from "mammograms/medical_information/medical_history/cards/breast_augmentation_history_card.jinja" import breast_augmentation_history_card %}{% from "components/participant-details/summary_list_rows.jinja" import last_mammogram_html %}
 {% from "mammograms/medical_information/medical_history/cards/breast_cancer_history_card.jinja" import breast_cancer_history_card %}
 {% from "mammograms/medical_information/medical_history/cards/mastectomy_or_lumpectomy_history_card.jinja" import mastectomy_or_lumpectomy_history_card %}
 {% from "mammograms/medical_information/medical_history/cards/benign_lump_history_card.jinja" import benign_lump_history_card %}
@@ -92,15 +92,6 @@
     {% endfor %}
   {% endset %}
 
-  {% set breast_augmentation_history_html %}
-    {% for presented_item in presenter.breast_augmentation_history %}
-      <a style="float: right" class="nhsuk-link nhsuk-link--no-visited-state" href="{{ presented_item.change_link.href}}">
-        {{ presented_item.change_link.text }}<span class="nhsuk-u-visually-hidden">{{ presented_item.change_link.visually_hidden_text }}</span>
-      </a><br>
-      {{ summaryList(presented_item.summary_list_params) }}
-    {% endfor %}
-  {% endset %}
-
   {% set other_procedure_history_html %}
     {% for presented_item in presenter.other_procedure_history %}
       <a style="float: right" class="nhsuk-link nhsuk-link--no-visited-state" href="{{ presented_item.change_link.href}}">
@@ -120,6 +111,7 @@
   {% endset %}
 
   {{ breast_cancer_history_card(presenter.breast_cancer_history) }}
+  {{ breast_augmentation_history_card(presenter.breast_augmentation_history) }}
   {{ mastectomy_or_lumpectomy_history_card(presenter.mastectomy_or_lumpectomy_history) }}
   {{ benign_lump_history_card(presenter.benign_lump_history) }}
 
@@ -139,17 +131,6 @@
        },
        "value": {
          "html": cyst_history_html
-       },
-       "actions": {
-          "items": []
-       }
-     },
-     {
-      "key": {
-         "text": "Breast implants or augmentation"
-       },
-       "value": {
-         "html": breast_augmentation_history_html
        },
        "actions": {
           "items": []
