add missing paragraph spacing override
Summary lists reduce this spacing to 12px and this component should too.

--- a/manage_breast_screening/assets/sass/components/_nested-info.scss
+++ b/manage_breast_screening/assets/sass/components/_nested-info.scss
@@ -96,6 +96,10 @@ the summaryList component does.
   margin-bottom: 0;
 }
 
+.app-nested-info__value > p {
+  margin-bottom: 12px;
+}
+
 // Remove the usual margin from paragraphs and lists, where it touches the border of the grid
 // leaving only the spacing from the .app-nested-info__value
 .app-nested-info__subvalue_row:last-child > .app-nested-info__subvalue > ul:last-child,
