--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -2,11 +2,13 @@
 {% from "nhsuk/components/button/macro.jinja" import button %}
 {% from "nhsuk/components/inset-text/macro.jinja" import insetText %}
 {% from "nhsuk/components/summary-list/macro.jinja" import summaryList %}
+{% from "mammograms/medical_information/medical_history/cards/benign_lump_history_card.jinja" import benign_lump_history_card %}
 {% from "mammograms/medical_information/medical_history/cards/breast_augmentation_history_card.jinja" import breast_augmentation_history_card %}{% from "components/participant-details/summary_list_rows.jinja" import last_mammogram_html %}
 {% from "mammograms/medical_information/medical_history/cards/breast_cancer_history_card.jinja" import breast_cancer_history_card %}
+{% from "mammograms/medical_information/medical_history/cards/cyst_history_card.jinja" import cyst_history_card %}
 {% from "mammograms/medical_information/medical_history/cards/implanted_medical_device_history_card.jinja" import implanted_medical_device_history_card %}
 {% from "mammograms/medical_information/medical_history/cards/mastectomy_or_lumpectomy_history_card.jinja" import mastectomy_or_lumpectomy_history_card %}
-{% from "mammograms/medical_information/medical_history/cards/benign_lump_history_card.jinja" import benign_lump_history_card %}
+{% from "mammograms/medical_information/medical_history/cards/other_procedure_history_card.jinja" import other_procedure_history_card %}
 {% from "mammograms/components/card_with_status.jinja" import card_with_status %}
 
 {% block step_content %}
@@ -83,56 +85,13 @@
   action_button_properties=presenter.review_action_button_properties(sections.MEDICAL_HISTORY),
   csrf_input=csrf_input,
   ) %}
-  {% set other_procedure_history_html %}
-    {% for presented_item in presenter.other_procedure_history %}
-      <a style="float: right" class="nhsuk-link nhsuk-link--no-visited-state" href="{{ presented_item.change_link.href}}">
-        {{ presented_item.change_link.text }}<span class="nhsuk-u-visually-hidden">{{ presented_item.change_link.visually_hidden_text }}</span>
-      </a><br>
-      {{ summaryList(presented_item.summary_list_params) }}
-    {% endfor %}
-  {% endset %}
-
-  {% set cyst_history_html %}
-    {% for presented_item in presenter.cyst_history %}
-      <a style="float: right" class="nhsuk-link nhsuk-link--no-visited-state" href="{{ presented_item.change_link.href}}">
-        {{ presented_item.change_link.text }}<span class="nhsuk-u-visually-hidden">{{ presented_item.change_link.visually_hidden_text }}</span>
-      </a><br>
-      {{ summaryList(presented_item.summary_list_params) }}
-    {% endfor %}
-  {% endset %}
-
   {{ breast_cancer_history_card(presenter.breast_cancer_history) }}
   {{ breast_augmentation_history_card(presenter.breast_augmentation_history) }}
   {{ implanted_medical_device_history_card(presenter.implanted_medical_device_history) }}
   {{ mastectomy_or_lumpectomy_history_card(presenter.mastectomy_or_lumpectomy_history) }}
+  {{ cyst_history_card(presenter.cyst_history) }}
   {{ benign_lump_history_card(presenter.benign_lump_history) }}
-
-  {{ summaryList({
-    "rows": [
-     {
-       "key": {
-         "text": "Cyst history"
-       },
-       "value": {
-         "html": cyst_history_html
-       },
-       "actions": {
-          "items": []
-       }
-     },
-     {
-       "key": {
-         "text": "Other procedure history"
-       },
-       "value": {
-         "html": other_procedure_history_html
-       },
-       "actions": {
-          "items": []
-       }
-     }
-    ]
-  }) }}
+  {{ other_procedure_history_card(presenter.other_procedure_history) }}
 
   <hr>
   <h3>Add medical history</h3>
