fix: add missing "Implants have been removed" text

--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_augmentation_history_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_augmentation_history_card.jinja
@@ -40,7 +40,15 @@
                     "html": list_with_default(presented_item.left_breast_procedures)
                   },
                 ]
-              }
+              },
+              {
+                "columns": [
+                  {
+                    "html": paragraph("Implants have been removed")
+                  }
+                ]
+
+              } if presented_item.implants_have_been_removed
             ]
           }
         },
