--- a/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_details.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_details.jinja
@@ -1,60 +1,9 @@
-{% extends 'layout-app.jinja' %}
+{% extends 'layout-appointment.jinja' %}
 {% from 'nhsuk/components/card/macro.jinja' import card %}
-{% from 'nhsuk/components/back-link/macro.jinja' import backLink %}
 {% from 'nhsuk/components/summary-list/macro.jinja' import summaryList %}
-{% from 'components/appointment-status/macro.jinja' import app_appointment_status %}
-{% from 'components/appointment-header/macro.jinja' import app_appointment_header %}
-{% from 'components/check-in/macro.jinja' import app_check_in %}
-{% from 'components/secondary-navigation/macro.jinja' import app_secondary_navigation %}
-{% from 'mammograms/special_appointments/special_appointment_banner.jinja' import special_appointment_banner %}
 {% from 'mammograms/appointment_notes/appointment_note_banner.jinja' import appointment_note_banner %}
 
-{% block beforeContent %}
-{{ backLink({
-  "href": presented_appointment.clinic_url,
-  "text": "Back to clinic"
-}) }}
-{% endblock beforeContent %}
-
-{% block page_content %}
-<div class="nhsuk-grid-row">
-  <div class="nhsuk-grid-column-full">
-
-  <div class="app-header">
-    <h1 class="nhsuk-heading-l">
-      <span class="nhsuk-caption-l">
-        {{ caption }}
-      </span>
-      {{ heading }}
-    </h1>
-
-    <div class="app-header__status-tag">
-      {{ app_appointment_status(presented_appointment) }}
-      <p class="nhsuk-u-margin-bottom-2">
-        {{ app_check_in(
-          presented_appointment,
-          check_in_url=url(
-            'mammograms:check_in',
-             kwargs={
-              'pk': presented_appointment.pk,
-              }
-          ),
-          csrf_input=csrf_input
-        ) }}
-      </p>
-    </div>
-
-  </div>
-
-  {{ app_appointment_header(request.user, presented_appointment, csrf_input=csrf_input) }}
-
-  {{ special_appointment_banner(presented_appointment.special_appointment, show_change_link=presented_appointment.active) }}
-
-  {{ app_secondary_navigation({
-    "visuallyHiddenTitle": "Secondary menu",
-    "items": secondary_nav_items
-  }) }}
-
+{% block tab_content %}
   {{ appointment_note_banner(
     appointment_note,
     change_url=url('mammograms:appointment_note', kwargs={'pk': presented_appointment.pk})
@@ -104,6 +53,4 @@
     "headingLevel": "2",
     "descriptionHtml": appointment_details_html
   }) }}
-  </div>
-</div>
 {% endblock %}
