--- a/manage_breast_screening/mammograms/jinja2/mammograms/appointment_should_not_proceed.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/appointment_should_not_proceed.jinja
@@ -28,7 +28,7 @@
     </form>
 
     <p>
-    <a href="{{ change_previous_mammogram_url }}">Edit previous mammogram details</a>
+    <a class="nhsuk-link--no-visited-state" href="{{ change_previous_mammogram_url }}">Edit previous mammogram details</a>
     </p>
   </div>
 </div>
