--- a/manage_breast_screening/auth/jinja2/auth/login.jinja
+++ b/manage_breast_screening/auth/jinja2/auth/login.jinja
@@ -1,13 +1,28 @@
 {% extends "layout-app.jinja" %}
+{% from "nhsuk/components/button/macro.jinja" import button %}
 
 {% block page_content %}
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
-    <h1 class="nhsuk-heading-l">Log in</h1>
+    <h1 class="nhsuk-heading-xl">Manage breast screening</h1>
 
-    <a class="nhsuk-button nhsuk-button--secondary" href="{{ url('auth:cis2_login') }}">
-      Log in with CIS2
-    </a>
+    <p>Use this service to:</p>
+    <ul>
+      <li>See appointment information for breast screening clinics</li>
+      <li>Check in participants and start appointments</li>
+      <li>Record symptoms and medical history</li>
+      <li>Record details of mammogram images</li>
+    </ul>
+
+    {{
+      button({
+        "classes": "nhsuk-button--login",
+        "html": "Log in with my Care Identity",
+        "href": url('auth:cis2_login')
+      })
+    }}
+
+    <p>Contact us if you have problems accessing this service.</p>
   </div>
 </div>
 {% endblock %}
