Make 'Contact us' a dead hyperlink on CIS2 login page
This will render the link in red, making it a slightly more prominent
reminder to add a href once the contact us page is ready.

--- a/manage_breast_screening/auth/jinja2/auth/login.jinja
+++ b/manage_breast_screening/auth/jinja2/auth/login.jinja
@@ -22,7 +22,9 @@
       })
     }}
 
-    <p>Contact us if you have problems accessing this service.</p>
+    <p>
+      <a href="#">Contact us</a> if you have problems accessing this service.
+    </p>
   </div>
 </div>
 {% endblock %}
