fix: apply --no-border to last visible row
Previously, if the last element of params.rows was null/undefined,
app-nested-info__row--no-border would not be added to any rows.

Now, we apply it to the last row that is present.

--- a/manage_breast_screening/core/jinja2/components/nested-info-card/template.jinja
+++ b/manage_breast_screening/core/jinja2/components/nested-info-card/template.jinja
@@ -2,7 +2,8 @@
 {% set headingLevel = params.headingLevel | default(2) %}
 {% call card(params.card) %}
   <div class="app-nested-info">
-    {% for row in params.rows %}
+    {% set rows = params.rows | select("mapping") %}
+    {% for row in rows %}
     {% if row %}
     <div class="app-nested-info__row {% if loop.last %}app-nested-info__row--no-border{% endif %}">
       <div class="app-nested-info__key">
