--- a/manage_breast_screening/auth/jinja2/auth/login.jinja
+++ b/manage_breast_screening/auth/jinja2/auth/login.jinja
@@ -1,6 +1,10 @@
 {% extends "layout-app.jinja" %}
 {% from "nhsuk/components/button/macro.jinja" import button %}
 
+{% block header %}
+  {{ header({ "service": { "text": "Manage breast screening" }}) }}
+{% endblock %}
+
 {% block page_content %}
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
