adjust copy to match prototype

--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/implanted_medical_device_history_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/implanted_medical_device_history_card.jinja
@@ -14,7 +14,7 @@
       <p>{{ presented_item.type }}</p>
       {% if presented_item.device_has_been_removed %}
         <p>
-          Device has been removed
+          Implanted device has been removed
         </p>
       {% endif %}
     {% endset %}
