prevent adding certain items more than once
If the item type is already added, then

- hide the add button
- prevent processing the form server side

Slack thread on this behaviour
https://screening-discovery.slack.com/archives/C082XV3GQVA/p1767881913228189?thread_ts=1767881782.224769&cid=C082XV3GQVA

> most of these things are effectively history items you could add more to over time - but these two are more like static attributes

--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -113,11 +113,13 @@
 
   <div class="nhsuk-button-group app-button-group--small">
     {% for button_info in presenter.medical_history_buttons %}
-      {{ button({
-        "text": button_info.text,
-        "href": button_info.href,
-        "classes": "nhsuk-button--secondary nhsuk-button--small"
-      }) }}
+      {% if button_info %}
+        {{ button({
+          "text": button_info.text,
+          "href": button_info.href,
+          "classes": "nhsuk-button--secondary nhsuk-button--small"
+        }) }}
+      {% endif %}
     {% endfor %}
   </div>
 {% endcall %}
