--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -7,6 +7,7 @@
 {% extends "nhsuk/template.jinja" %}
 
 {% block head %}
+  <meta name="robots" content="noindex, nofollow, noarchive">
   <link rel="stylesheet" href="{{ static('css/main.css' )}}">
 {% endblock %}
 
