Fix asset path slash
* Remove the leading slash from assets

STATIC_URL includes a trailing slash already.

--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -3,7 +3,7 @@
 {% from "notification-banner/macro.jinja" import notificationBanner %}
 {% from 'components/appointment-status-bar.jinja' import app_appointment_status_bar %}
 
-{% set assetPath = STATIC_URL ~ "/assets" %}
+{% set assetPath = STATIC_URL ~ "assets" %}
 {% extends "nhsuk/template.jinja" %}
 
 {% block head %}
