use card title instead of separate headings
The heading is a mandatory element for the card component. Although it's
not enforced, without one there is a lot of empty space.

This commit removes the seperate headings and instead uses the card
heading. The most common case is that we have a single history item per
type, in which case the heading we were previously displaying outside
the card is now part of the card.

In the case where we have multiple history items for a type, this will
flatten the structure and combine the h3 and h4 headings we had before,
e.g. Implanted medical device: item 1.

The card component automatically uses the card heading as visually
hidden text to disambiguate the actions links. This fixes a bug where
we were rendering hidden text for "item 1" but not saying what type
of history item it belonged to.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_augmentation_history_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_augmentation_history_card.jinja
@@ -4,28 +4,24 @@
 {% macro breast_augmentation_history_card(breast_augmentation_history) %}
   {% if breast_augmentation_history %}
   <section>
-    <h3 class="nhsuk-u-margin-bottom-2">Breast implants or augmentation</h3>
   {% endif %}
 
   {% for presented_item in breast_augmentation_history %}
-    {% set keyHeadingLevel = 5 if presented_item.counter else 4 %}
-
     {{ app_nested_info_card({
       "card": {
-        "heading": "Item " ~ presented_item.counter if presented_item.counter,
-        "headingLevel": 4 if presented_item.counter,
+        "heading": "Breast implants or augmentation" ~ (": item " ~ presented_item.counter if presented_item.counter),
+        "headingLevel": 3,
         "classes": "nhsuk-u-margin-bottom-4",
         "actions": {
           "items": [
             {
               "text": presented_item.change_link.text,
-              "visuallyHiddenText": presented_item.change_link.visually_hidden_text,
               "href": presented_item.change_link.href
             }
           ]
         }
       },
-      "headingLevel": keyHeadingLevel,
+      "headingLevel": 4,
       "rows": [
         {
           "key": "Procedures",
