--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/implanted_medical_device_history_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/implanted_medical_device_history_card.jinja
@@ -4,12 +4,9 @@
 {% macro implanted_medical_device_history_card(implanted_medical_device_history) %}
   {% if implanted_medical_device_history %}
   <section>
-    <h3 class="nhsuk-u-margin-bottom-2">Implanted medical device</h3>
   {% endif %}
 
   {% for presented_item in implanted_medical_device_history %}
-    {% set keyHeadingLevel = 5 if presented_item.counter else 4 %}
-
     {% set type_html %}
       <p>{{ presented_item.type }}</p>
       {% if presented_item.device_has_been_removed %}
@@ -21,20 +18,19 @@
 
     {{ app_nested_info_card({
       "card": {
-        "heading": "Item " ~ presented_item.counter if presented_item.counter,
-        "headingLevel": 4 if presented_item.counter,
+        "heading": "Implanted medical device" ~ (": item " ~ presented_item.counter if presented_item.counter),
+        "headingLevel": 3,
         "classes": "nhsuk-u-margin-bottom-4",
         "actions": {
           "items": [
             {
               "text": presented_item.change_link.text,
-              "visuallyHiddenText": presented_item.change_link.visually_hidden_text,
               "href": presented_item.change_link.href
             }
           ]
         }
       },
-      "headingLevel": keyHeadingLevel,
+      "headingLevel": 4,
       "rows": [
         {
           "key": "Type",
