Workflow steps UI
Display on each 'hub' page in the left column.

When a state is done it's ticked.

The current state has a blue left margin and the number in blue.

Not done states have greyed number.

Completed states link back to their page.

--- a/manage_breast_screening/assets/sass/main.scss
+++ b/manage_breast_screening/assets/sass/main.scss
@@ -10,6 +10,7 @@
 @forward "components/card-with-status";
 @forward "components/special-appointment-banner";
 @forward "components/nested-info";
+@forward "components/workflow-steps";
 
 $color_app-dark-blue: #00386e;
 
