--- a/manage_breast_screening/mammograms/jinja2/mammograms/check_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/check_information.jinja
@@ -1,5 +1,7 @@
-{% extends 'layout-app.jinja' %}
+{% extends 'workflow_step.jinja' %}
 
-{% block page_content %}
-    <h1> Check Information </h1>
+{% set active_workflow_step = 'CHECK_INFORMATION' %}
+
+{% block step_content %}
+
 {% endblock %}
