--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -1,4 +1,4 @@
-{% extends "wizard_step.jinja" %}
+{% extends "workflow_step.jinja" %}
 {% from "nhsuk/components/button/macro.jinja" import button %}
 {% from "nhsuk/components/inset-text/macro.jinja" import insetText %}
 {% from "nhsuk/components/summary-list/macro.jinja" import summaryList %}
@@ -10,6 +10,8 @@
 {% from "mammograms/medical_information/medical_history/cards/mastectomy_or_lumpectomy_history_card.jinja" import mastectomy_or_lumpectomy_history_card %}
 {% from "mammograms/medical_information/medical_history/cards/other_procedure_history_card.jinja" import other_procedure_history_card %}
 {% from "mammograms/components/card_with_status.jinja" import card_with_status %}
+
+{% set active_workflow_step = 'REVIEW_MEDICAL_INFORMATION' %}
 
 {% block step_content %}
 
