--- a/manage_breast_screening/clinics/jinja2/clinics/select_provider.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/select_provider.jinja
@@ -7,7 +7,22 @@
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
     {% if providers|length == 0 %}
-      <p>No providers found. Check that you've been assigned a role with at least one provider.</p>
+      <h1>Your account is not recognised</h1>
+
+      <p> This may be because your breast screening office:</p>
+
+      <ul class="nhsuk-list nhsuk-list--bullet">
+        <li>has not registered you as a user, or</li>
+        <li>is not set up to use this service</li>
+      </ul>
+
+      <p>
+        Check if you are using the correct login, then find out from your programme manager if you should be able to access this service.
+      </p>
+
+      <p>
+        <a href="#">Contact us</a> if you are unable to resolve the issue.
+      </p>
     {% else %}
       <form method="post">
         {{ csrf_input }}
