Add additional image details

--- a/manage_breast_screening/nhsuk_forms/jinja2/django_form_helpers.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/django_form_helpers.jinja
@@ -9,8 +9,8 @@
           {% set ns.errors = ns.errors + [{"text": field.errors[0], "href": "#" ~ field.auto_id}] %}
         {% endif %}
       {% endfor %}
-      {% for error_list in form.non_field_errors() %}
-        {% set ns.errors = ns.errors + [{"text": ",".join(error_list)}] %}
+      {% for error in form.non_field_errors() %}
+        {% set ns.errors = ns.errors + [{"text": error}] %}
       {% endfor %}
 
       {{ errorSummary({
